--- a/lec1.tex
+++ b/lec1.tex
@@ -74,7 +74,7 @@ If we run $P$ with the same \emph{low} value and with two different \emph{high} 
   \end{itemize}
 \end{itemize}
 \subsection*{Categories of Logical Relations}
-We can split logical relations into two logical relations and logical predicates. Logical predicates are unary and used usually used to show properties of a program. Logical relations are binary and are usually used to show equivalences:
+We can split logical relations into two logical relations and logical predicates. Logical predicates are unary and used usually used to show properties of a program. Logical relations are binary and are usually used to show equivalences:\\
 \begin{tabular}{l | l}
   Logical Predicates     & Logical Relations    \\
 \hline
