--- a/lec3.tex
+++ b/lec3.tex
@@ -279,7 +279,7 @@ If we can prove the above soundness, then we can state our free theorems with $\
 \subsection*{Exercises}
 \begin{enumerate}
 \item Do the lambda and application case of the \emph{Fundamental Property} theorem.%Specify in what proof, probably fundemental property
-\item Try to prove the monotonicity lemma where the definition of the value interpretation has been adjusted with:
+\item Try to prove the \emph{monotonicity} lemma where the definition of the value interpretation has been adjusted with:
 \[
 \vpres{\tarrow{\tau_1}{\tau_2}} = \{\tlabs{x}{\tau_1}{e} \vbar \; \forall v \in \vpres{\tau_1}. \; \sub{e}{v}{x} \in \epres{\tau_2} \}
 \]
