--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 % Indsættelse af grafik.
 \usepackage{graphicx}
 \usepackage{xcolor}
+\usepackage{multirow}
 
 %\setlength{\mathindent{0cm}}
 
@@ -199,14 +200,14 @@
 \newtheorem*{fundamentalprop}{Theorem}
 
 \author{Lau Skorstengaard\\lask@cs.au.dk}
-\title{OPLSS15, Notes for Amal Ahmed's lectures.}
+b\title{OPLSS15, Notes for Amal Ahmed's lectures.}
 \begin{document}
-\maketitle The videos of the lectures of OPLSS 2015 can be found at \url{https://www.cs.uoregon.edu/research/summerschool/summer15/curriculum.html}. 
-%\input{lec1}
-%\input{lec2}
+\maketitle The videos of the lectures at OPLSS 2015 can be found at \url{https://www.cs.uoregon.edu/research/summerschool/summer15/curriculum.html}. 
+\input{lec1}
+\input{lec2}
 \input{lec3}
-%\input{lec4}
-%\input{lec5}
+\input{lec4}
+\input{lec5}
 \end{document}
 
 
